# usb-link-speed-tray

./: .gitignore  LICENSE  README.md  pyproject.toml
desktop/: usb-link-speed-tray.desktop
src/usb_link_speed_tray/: __init__.py  main.py
