[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-link-speed-tray"
version = "0.1.0"
description = "Tray app showing link speed of attached external USB storage (e.g. 480 Mbps vs 5 Gbps)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42",
    "cairosvg>=2.7",
    "Pillow>=10",
]

[project.scripts]
usb-link-speed-tray = "usb_link_speed_tray.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
